# mcp-shell-server

./: .codecov.yml  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  code_analysis_report.md  pyproject.toml  smithery.yaml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  codebase_structure.md  memory_index.md  memory_navigation_guide.md  project_purpose.md  session_checkpoint_2025_09_06.md  session_summary_current.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
.well-known/: x402.json
docs/: TESTING.md
mcp_shell_server/: __init__.py  server.py  shell_executor.py
openspec/changes/add-command-audit-logs/: tasks.md
openspec/changes/bound-command-execution/: proposal.md  tasks.md
openspec/changes/contain-redirection-paths/: proposal.md  (+1 more)
src/mcp_shell_server/: command_preprocessor.py  command_validator.py  directory_manager.py  io_redirection_handler.py  process_manager.py  server.py  shell_executor.py
tests/: conftest.py  conftest_new.py  test_audit_logging.py  test_command_validator.py  test_directory_manager.py  test_init.py  test_process_manager.py  test_process_manager_additional.py  test_process_manager_macos.py  test_server.py  test_server_validation.py  test_shell_executor.py  test_shell_executor_edge_cases.py  test_shell_executor_error_cases.py  test_shell_executor_more_coverage.py  test_shell_executor_new_tests.py  test_shell_executor_pipe.py  test_shell_executor_pipeline.py  test_shell_executor_redirections.py  test_shell_executor_redirections.py.bak
(+47 files in other folders)
