[project]
name = "mcp-shell-server"
version = "0.1.0"
description = "MCP Shell Server - Execute shell commands via MCP protocol"
authors = [
    { name = "tumf" }
]
dependencies = [
    "mcp>=1.1.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
mcp-shell-server = "mcp_shell_server.server:main"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-env>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = "tests"